only include in editor compilation

--- a/Editor/JonasWischeropp.Unity.EditorTools.Hierarchy.asmdef
+++ b/Editor/JonasWischeropp.Unity.EditorTools.Hierarchy.asmdef
@@ -1,3 +1,4 @@
 {
-	"name": "JonasWischeropp.Unity.EditorTools.Hierarchy"
+	"name": "JonasWischeropp.Unity.EditorTools.Hierarchy",
+	"includePlatforms": ["Editor"]
 }
